# Spectrum-Player

./: .gitignore  CMakeLists.txt  Makefile  README.MD  fft.h  main.cpp  mp3AudioStream.cpp  mp3AudioStream.hpp  mp3AutioStream.cpp  mp3Handler.cpp  mp3Handler.h  utils.cpp  utils.h  visuals.cpp  visuals.h
studies/: main.py
